--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,11 +4,13 @@
 
   <ul class="actions">
     <li><%= link_to "Edit Project", edit_project_path(@project), class: "edit" %></li>
-    <li><%= link_to "Delete Project",
-      admin_project_path(@project), 
-      method: :delete,
-      data: { confirm: "Are you sure you want to delete this project?" },
-      class: "delete" %></li>
+    <% admins_only do %>
+      <li><%= link_to "Delete Project",
+        admin_project_path(@project), 
+        method: :delete,
+        data: { confirm: "Are you sure you want to delete this project?" },
+        class: "delete" %></li>
+    <% end %>
   </ul>
 </header>
 <p><%= @project.description %></p>
