--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -29,8 +29,9 @@
 <ul id="tickets">
   <% @project.tickets.each do |ticket| %>
     <li>
-    #<%= ticket.id %> -
-    <%= link_to ticket.name, [@project, ticket] %>
+      #<%= ticket.id %> -
+      <%= link_to ticket.name, [@project, ticket] %>
+      <%= render ticket.state if ticket.state %>
     </li>
   <% end %>
 </ul>
